fix (robot card + alpha of text in cards)

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -13,4 +13,5 @@
     <string name="animals">Животные</string>
     <string name="food">Еда</string>
     <string name="sports">Спорт</string>
+    <string name="robot">С роботом</string>
 </resources>
