--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="animals">Animals</string>
     <string name="food">Food</string>
     <string name="sports">Sports</string>
+    <string name="robot">With robot</string>
 </resources>
