feat: integrate ViewModel to enable future server communication functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="random_game">Random game</string>
     <string name="select_random_game">Select random game</string>
     <string name="by_category">By category</string>
-    <string name="cities">Cities</string>
+    <string name="countries">Countries</string>
     <string name="animals">Animals</string>
     <string name="food">Food</string>
     <string name="sports">Sports</string>
