--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="food">Food</string>
     <string name="go_back">Go back</string>
     <string name="used_words">Used words</string>
+    <string name="type_a_word">Enter word</string>
 </resources>
