feat: first attempt to create GamesScreen, game cards were created(need to be repaired)

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -18,5 +18,9 @@
     <string name="mode">Режим</string>
     <string name="players_limit">Лимит игроков</string>
     <string name="team_name">Название комнаты</string>
-    <string name="passwrod">Пароль</string>
+    <string name="passwrod">Пароль(необязательно)</string>
+    <string name="open">Открыто</string>
+    <string name="private_">Приватная</string>
+    <string name="full">Набрана</string>
+    <string name="players">Игроков: %1$s / %2$s</string>
 </resources>
