--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,9 @@
     <string name="mode">Mode</string>
     <string name="players_limit">Players limit</string>
     <string name="team_name">Team name</string>
-    <string name="passwrod">Password</string>
+    <string name="passwrod">Password(optional)</string>
+    <string name="open">Open</string>
+    <string name="private_">Private</string>
+    <string name="full">Full</string>
+    <string name="players">Players: %1$s / %2$s</string>
 </resources>
