--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="type_a_word">Enter word</string>
     <string name="mode">Mode</string>
     <string name="players_limit">Players limit</string>
-    <string name="room_name">Team name</string>
+    <string name="room_name">Room name</string>
     <string name="room_password">Password (optional)</string>
     <string name="open">Open</string>
     <string name="private_">Private</string>
