--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -29,7 +29,7 @@
     <string name="seconds">сек</string>
     <string name="minutes">мин</string>
     <string name="hours">ч</string>
-    <string name="days">д</string>
+    <string name="days">дн</string>
     <string name="turn_duration">Длительность хода</string>
     <string name="amount">Количество</string>
 </resources>
